--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./lib/bootstrap.min.css">
     <title>New comer</title>
 </head>
 
 <body>
-    <h1>Schndier Electric New Comer</h1>
-    <video controls autoplay width="480px" height="270px">
+    <div class="row">
+        <div class="col-sm-12">
+            <h1>SE-New Comer</h1>
+            <br>
+            <video controls autoplay width="480px" height="270px">
     <source  src="./videos/newcomer.min.mp4" type="video/mp4" />
 </video>
+        </div>
+    </div>
 
 
+    <script src="./lib/jquery-3.4.1.min.js"></script>
+    <script src="./lib/bootstrap.min.js"></script>
 </body>
 
 </html>
